--- a/Grandoria/gallery.html
+++ b/Grandoria/gallery.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Gallery - Grandoria Bootstrap Template</title>
+  <title>Gallery - Gaurikeerthana Bootstrap Template</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -28,7 +28,7 @@
   <link href="assets/css/main.css" rel="stylesheet">
 
   <!-- =======================================================
-  * Template Name: Grandoria
+  * Template Name: Gaurikeerthana
   * Template URL: https://bootstrapmade.com/grandoria-bootstrap-hotel-template/
   * Updated: Jul 29 2025 with Bootstrap v5.3.7
   * Author: BootstrapMade.com
@@ -59,7 +59,7 @@
         <a href="index.html" class="logo d-flex align-items-center">
           <!-- Uncomment the line below if you also wish to use an image logo -->
           <!-- <img src="assets/img/logo.webp" alt=""> -->
-          <h1 class="sitename">Grandoria</h1>
+          <h1 class="sitename">Gaurikeerthana</h1>
         </a>
 
         <nav id="navmenu" class="navmenu">
@@ -110,7 +110,6 @@
             <li data-filter=".filter-rooms">Rooms</li>
             <li data-filter=".filter-amenities">Amenities</li>
             <li data-filter=".filter-dining">Dining</li>
-            <li data-filter=".filter-exterior">Exterior</li>
           </ul><!-- End Hotel Gallery Filters -->
 
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
@@ -154,16 +153,6 @@
               </div>
             </div><!-- End Gallery Item -->
 
-            <div class="col-lg-8 col-md-6 gallery-item isotope-item filter-exterior">
-              <div class="gallery-wrapper">
-                <img src="assets/img/hotel/showcase-3.webp" class="img-fluid" alt="Hotel Exterior">
-                <div class="gallery-overlay">
-                  <a href="assets/img/hotel/showcase-3.webp" class="glightbox" title="Hotel Exterior at Sunset">
-                    <i class="bi bi-eye"></i>
-                  </a>
-                </div>
-              </div>
-            </div><!-- End Gallery Item -->
 
             <div class="col-lg-4 col-md-6 gallery-item isotope-item filter-amenities">
               <div class="gallery-wrapper">
@@ -209,16 +198,6 @@
               </div>
             </div><!-- End Gallery Item -->
 
-            <div class="col-lg-4 col-md-6 gallery-item isotope-item filter-exterior">
-              <div class="gallery-wrapper">
-                <img src="assets/img/hotel/location-2.webp" class="img-fluid" alt="Garden View">
-                <div class="gallery-overlay">
-                  <a href="assets/img/hotel/location-2.webp" class="glightbox" title="Hotel Gardens &amp; Landscaping">
-                    <i class="bi bi-eye"></i>
-                  </a>
-                </div>
-              </div>
-            </div><!-- End Gallery Item -->
 
             <div class="col-lg-4 col-md-6 gallery-item isotope-item filter-dining">
               <div class="gallery-wrapper">
@@ -259,7 +238,7 @@
         <div class="row gy-4">
           <div class="col-lg-4 col-md-6 footer-about">
             <a href="index.html" class="logo d-flex align-items-center">
-              <span class="sitename">Grandoria</span>
+              <span class="sitename">Gaurikeerthana</span>
             </a>
             <div class="footer-contact pt-3">
               <p>A108 Adam Street</p>
@@ -334,10 +313,8 @@
         </div>
 
         <div class="social-links order-first order-lg-last mb-3 mb-lg-0">
-          <a href=""><i class="bi bi-twitter-x"></i></a>
-          <a href=""><i class="bi bi-facebook"></i></a>
           <a href=""><i class="bi bi-instagram"></i></a>
-          <a href=""><i class="bi bi-whattsapp"></i></a>
+          <a href=""><i class="bi bi-whatsapp"></i></a>
         </div>
 
       </div>
