--- a/Grandoria/rooms.html
+++ b/Grandoria/rooms.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Rooms - Grandoria Bootstrap Template</title>
+  <title>Rooms - Gaurikeerthana Bootstrap Template</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -28,7 +28,7 @@
   <link href="assets/css/main.css" rel="stylesheet">
 
   <!-- =======================================================
-  * Template Name: Grandoria
+  * Template Name: Gaurikeerthana
   * Template URL: https://bootstrapmade.com/grandoria-bootstrap-hotel-template/
   * Updated: Jul 29 2025 with Bootstrap v5.3.7
   * Author: BootstrapMade.com
@@ -43,12 +43,12 @@
     <div class="topbar d-flex align-items-center dark-background">
       <div class="container d-flex justify-content-center justify-content-md-between">
         <div class="contact-info d-flex align-items-center">
-          <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:Gaurikeerthanagvyr@gmail.com">Gaurikeerthanagvyr@gmail.com</a></i>
-          <i class="bi bi-phone d-flex align-items-center ms-4"><span>+91 994779277 , +91 4872081979</span></i>
+          <a href="mailto:Gaurikeerthanagvyr@gmail.com">Gaurikeerthanagvyr@gmail.com</a>
+          <span class="ms-4">+91 994779277 , +91 4872081979</span>
         </div>
         <div class="social-links d-none d-md-flex align-items-center">
-          <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-          <a href="#" class="Whattsapp"><i class="bi bi-whattsapp"></i></a>
+          <a href="#" class="instagram">Instagram</a>
+          <a href="#" class="WhatsApp">WhatsApp</a>
         </div>
       </div>
     </div><!-- End Top Bar -->
@@ -59,7 +59,7 @@
         <a href="index.html" class="logo d-flex align-items-center">
           <!-- Uncomment the line below if you also wish to use an image logo -->
           <!-- <img src="assets/img/logo.webp" alt=""> -->
-          <h1 class="sitename">Grandoria</h1>
+          <h1 class="sitename">GAURIKEERTHANA</h1>
         </a>
 
         <nav id="navmenu" class="navmenu">
@@ -69,7 +69,7 @@
             <li><a href="rooms.html" class="active">Rooms</a></li>
             <li><a href="amenities.html">Amenities</a></li>
             <li><a href="location.html">Location</a></li>
-            <li class="dropdown"><a href="#"><span>Pages</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+            <li class="dropdown"><a href="#"><span>Pages</span></a>
               <ul>
                 <li><a href="room-details.html">Room Details</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
@@ -104,46 +104,6 @@
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
-        <div class="room-filters" data-aos="fade-up" data-aos-delay="200">
-          <div class="row g-3 align-items-center">
-            <div class="col-lg-3 col-md-6">
-              <label class="form-label">Price Range</label>
-              <select class="form-select">
-                <option>All Prices</option>
-                <option>$100 - $200</option>
-                <option>$200 - $350</option>
-                <option>$350+</option>
-              </select>
-            </div>
-            <div class="col-lg-3 col-md-6">
-              <label class="form-label">Guest Capacity</label>
-              <select class="form-select">
-                <option>Any Capacity</option>
-                <option>1-2 Guests</option>
-                <option>3-4 Guests</option>
-                <option>5+ Guests</option>
-              </select>
-            </div>
-            <div class="col-lg-3 col-md-6">
-              <label class="form-label">View Type</label>
-              <select class="form-select">
-                <option>All Views</option>
-                <option>Ocean View</option>
-                <option>City View</option>
-                <option>Garden View</option>
-              </select>
-            </div>
-            <div class="col-lg-3 col-md-6">
-              <label class="form-label">Sort By</label>
-              <select class="form-select">
-                <option>Popularity</option>
-                <option>Price: Low to High</option>
-                <option>Price: High to Low</option>
-                <option>Room Size</option>
-              </select>
-            </div>
-          </div>
-        </div>
 
         <div class="rooms-grid" data-aos="fade-up" data-aos-delay="300">
           <div class="row g-4">
@@ -151,33 +111,29 @@
             <div class="col-xl-4 col-lg-6">
               <div class="room-card">
                 <div class="room-image">
-                  <img src="assets/img/hotel/room-1.webp" alt="Deluxe Ocean Suite" class="img-fluid">
+                  <img src="https://res.cloudinary.com/dwr3ssg8e/image/upload/v1757927627/qiejjeaivz1jsdhxjicl.jpg" alt="Normal Non-AC Room" class="img-fluid">
                   <div class="room-features">
-                    <span class="feature-badge ocean">Ocean View</span>
+                    <span class="feature-badge city">Budget Friendly</span>
                     <span class="feature-badge popular">Popular</span>
                   </div>
                 </div>
                 <div class="room-content">
                   <div class="room-header">
-                    <h3>Deluxe Ocean Suite</h3>
+                    <h3>Normal Non-AC Room</h3>
                     <div class="room-rating">
-                      <i class="bi bi-star-fill"></i>
-                      <i class="bi bi-star-fill"></i>
-                      <i class="bi bi-star-fill"></i>
-                      <i class="bi bi-star-fill"></i>
-                      <i class="bi bi-star-fill"></i>
+                      <span>★★★★☆</span>
                     </div>
                   </div>
-                  <p class="room-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                  <p class="room-description">Basic comfortable room with essential amenities. Ideal for budget-conscious travelers who prefer natural ventilation and cooling.</p>
                   <div class="room-amenities">
-                    <span><i class="bi bi-people"></i> Up to 4 guests</span>
-                    <span><i class="bi bi-wifi"></i> Free WiFi</span>
-                    <span><i class="bi bi-tv"></i> Smart TV</span>
+                    <span>Up to 2 guests</span>
+                    <span>Free WiFi</span>
+                    <span>Natural Ventilation</span>
                   </div>
                   <div class="room-footer">
                     <div class="room-price">
                       <span class="price-from">From</span>
-                      <span class="price-amount">$289</span>
+                      <span class="price-amount">₹2,000</span>
                       <span class="price-period">/ night</span>
                     </div>
                     <a href="room-details.html" class="btn-room-details">View Details</a>
@@ -189,32 +145,28 @@
             <div class="col-xl-4 col-lg-6">
               <div class="room-card">
                 <div class="room-image">
-                  <img src="assets/img/hotel/room-3.webp" alt="Executive Business Suite" class="img-fluid">
+                  <img src="https://res.cloudinary.com/dwr3ssg8e/image/upload/v1757927628/i76dwh68u6nhlpbsswkb.jpg" alt="Normal AC Room" class="img-fluid">
                   <div class="room-features">
-                    <span class="feature-badge business">Business</span>
+                    <span class="feature-badge business">Air Conditioned</span>
                   </div>
                 </div>
                 <div class="room-content">
                   <div class="room-header">
-                    <h3>Executive Business Suite</h3>
+                    <h3>Normal AC Room</h3>
                     <div class="room-rating">
-                      <i class="bi bi-star-fill"></i>
-                      <i class="bi bi-star-fill"></i>
-                      <i class="bi bi-star-fill"></i>
-                      <i class="bi bi-star-fill"></i>
-                      <i class="bi bi-star-half"></i>
+                      <span>★★★★☆</span>
                     </div>
                   </div>
-                  <p class="room-description">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                  <p class="room-description">Comfortable and well-equipped room with air conditioning, perfect for a pleasant stay. Features modern amenities and comfortable bedding.</p>
                   <div class="room-amenities">
-                    <span><i class="bi bi-people"></i> Up to 2 guests</span>
-                    <span><i class="bi bi-laptop"></i> Work Desk</span>
-                    <span><i class="bi bi-telephone"></i> Business Phone</span>
+                    <span>Up to 2 guests</span>
+                    <span>Air Conditioning</span>
+                    <span>Free WiFi</span>
                   </div>
                   <div class="room-footer">
                     <div class="room-price">
                       <span class="price-from">From</span>
-                      <span class="price-amount">$199</span>
+                      <span class="price-amount">₹2,500</span>
                       <span class="price-period">/ night</span>
                     </div>
                     <a href="room-details.html" class="btn-room-details">View Details</a>
@@ -226,71 +178,29 @@
             <div class="col-xl-4 col-lg-6">
               <div class="room-card">
                 <div class="room-image">
-                  <img src="assets/img/hotel/room-7.webp" alt="Family Garden Room" class="img-fluid">
+                  <img src="https://res.cloudinary.com/dwr3ssg8e/image/upload/v1757927644/xxmdyknrwjzwvfkrspia.jpg" alt="Deluxe AC Room" class="img-fluid">
                   <div class="room-features">
-                    <span class="feature-badge family">Family Friendly</span>
-                    <span class="feature-badge garden">Garden View</span>
-                  </div>
-                </div>
-                <div class="room-content">
-                  <div class="room-header">
-                    <h3>Family Garden Room</h3>
-                    <div class="room-rating">
-                      <i class="bi bi-star-fill"></i>
-                      <i class="bi bi-star-fill"></i>
-                      <i class="bi bi-star-fill"></i>
-                      <i class="bi bi-star-fill"></i>
-                      <i class="bi bi-star"></i>
-                    </div>
-                  </div>
-                  <p class="room-description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-                  <div class="room-amenities">
-                    <span><i class="bi bi-people"></i> Up to 5 guests</span>
-                    <span><i class="bi bi-cup-hot"></i> Mini Kitchen</span>
-                    <span><i class="bi bi-controller"></i> Game Console</span>
-                  </div>
-                  <div class="room-footer">
-                    <div class="room-price">
-                      <span class="price-from">From</span>
-                      <span class="price-amount">$159</span>
-                      <span class="price-period">/ night</span>
-                    </div>
-                    <a href="room-details.html" class="btn-room-details">View Details</a>
-                  </div>
-                </div>
-              </div>
-            </div><!-- End Room Card -->
-
-            <div class="col-xl-4 col-lg-6">
-              <div class="room-card">
-                <div class="room-image">
-                  <img src="assets/img/hotel/room-12.webp" alt="Romantic Honeymoon Suite" class="img-fluid">
-                  <div class="room-features">
-                    <span class="feature-badge romantic">Romantic</span>
+                    <span class="feature-badge luxury">Luxury</span>
                     <span class="feature-badge premium">Premium</span>
                   </div>
                 </div>
                 <div class="room-content">
                   <div class="room-header">
-                    <h3>Romantic Honeymoon Suite</h3>
+                    <h3>Deluxe AC Room</h3>
                     <div class="room-rating">
-                      <i class="bi bi-star-fill"></i>
-                      <i class="bi bi-star-fill"></i>
-                      <i class="bi bi-star-fill"></i>
-                      <i class="bi bi-star-fill"></i>
-                      <i class="bi bi-star-fill"></i>
+                      <span>★★★★★</span>
                     </div>
                   </div>
-                  <p class="room-description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim.</p>
+                  <p class="room-description">Experience ultimate comfort in our Deluxe AC Room featuring modern amenities, premium air conditioning, and elegant furnishings. Perfect for guests seeking luxury and comfort.</p>
                   <div class="room-amenities">
-                    <span><i class="bi bi-people"></i> Up to 2 guests</span>
-                    <span><i class="bi bi-heart"></i> King Bed</span>
-                    <span><i class="bi bi-water"></i> Jacuzzi</span>
+                    <span>Up to 2 guests</span>
+                    <span>Premium Air Conditioning</span>
+                    <span>Smart TV & WiFi</span>
                   </div>
                   <div class="room-footer">
                     <div class="room-price">
                       <span class="price-from">From</span>
-                      <span class="price-amount">$349</span>
+                      <span class="price-amount">₹4,000</span>
                       <span class="price-period">/ night</span>
                     </div>
                     <a href="room-details.html" class="btn-room-details">View Details</a>
@@ -299,92 +209,10 @@
               </div>
             </div><!-- End Room Card -->
 
-            <div class="col-xl-4 col-lg-6">
-              <div class="room-card">
-                <div class="room-image">
-                  <img src="assets/img/hotel/room-15.webp" alt="Standard City Room" class="img-fluid">
-                  <div class="room-features">
-                    <span class="feature-badge city">City View</span>
-                  </div>
-                </div>
-                <div class="room-content">
-                  <div class="room-header">
-                    <h3>Standard City Room</h3>
-                    <div class="room-rating">
-                      <i class="bi bi-star-fill"></i>
-                      <i class="bi bi-star-fill"></i>
-                      <i class="bi bi-star-fill"></i>
-                      <i class="bi bi-star-half"></i>
-                      <i class="bi bi-star"></i>
-                    </div>
-                  </div>
-                  <p class="room-description">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.</p>
-                  <div class="room-amenities">
-                    <span><i class="bi bi-people"></i> Up to 2 guests</span>
-                    <span><i class="bi bi-wifi"></i> Free WiFi</span>
-                    <span><i class="bi bi-car-front"></i> Parking</span>
-                  </div>
-                  <div class="room-footer">
-                    <div class="room-price">
-                      <span class="price-from">From</span>
-                      <span class="price-amount">$129</span>
-                      <span class="price-period">/ night</span>
-                    </div>
-                    <a href="room-details.html" class="btn-room-details">View Details</a>
-                  </div>
-                </div>
-              </div>
-            </div><!-- End Room Card -->
-
-            <div class="col-xl-4 col-lg-6">
-              <div class="room-card">
-                <div class="room-image">
-                  <img src="assets/img/hotel/room-18.webp" alt="Premium Ocean View" class="img-fluid">
-                  <div class="room-features">
-                    <span class="feature-badge ocean">Ocean View</span>
-                    <span class="feature-badge luxury">Luxury</span>
-                  </div>
-                </div>
-                <div class="room-content">
-                  <div class="room-header">
-                    <h3>Premium Ocean View</h3>
-                    <div class="room-rating">
-                      <i class="bi bi-star-fill"></i>
-                      <i class="bi bi-star-fill"></i>
-                      <i class="bi bi-star-fill"></i>
-                      <i class="bi bi-star-fill"></i>
-                      <i class="bi bi-star-fill"></i>
-                    </div>
-                  </div>
-                  <p class="room-description">Totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt.</p>
-                  <div class="room-amenities">
-                    <span><i class="bi bi-people"></i> Up to 3 guests</span>
-                    <span><i class="bi bi-cup-hot"></i> Coffee Machine</span>
-                    <span><i class="bi bi-safe"></i> Safe</span>
-                  </div>
-                  <div class="room-footer">
-                    <div class="room-price">
-                      <span class="price-from">From</span>
-                      <span class="price-amount">$259</span>
-                      <span class="price-period">/ night</span>
-                    </div>
-                    <a href="room-details.html" class="btn-room-details">View Details</a>
-                  </div>
-                </div>
-              </div>
-            </div><!-- End Room Card -->
 
           </div>
         </div>
 
-        <div class="load-more-section" data-aos="fade-up" data-aos-delay="400">
-          <div class="text-center">
-            <button class="btn-load-more">
-              <i class="bi bi-arrow-down-circle"></i>
-              Load More Rooms
-            </button>
-          </div>
-        </div>
 
       </div>
 
@@ -452,7 +280,7 @@
   </footer>
 
   <!-- Scroll Top -->
-  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center">↑</a>
 
   <!-- Preloader -->
   <div id="preloader"></div>
