--- a/Grandoria/amenities.html
+++ b/Grandoria/amenities.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Amenities - Grandoria Bootstrap Template</title>
+  <title>Amenities - Gaurikeerthana Bootstrap Template</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -47,7 +47,7 @@
     <div class="branding d-flex align-items-center">
       <div class="container position-relative d-flex align-items-center justify-content-between">
         <a href="index.html" class="logo d-flex align-items-center">
-          <h1 class="sitename">Grandoria</h1>
+          <h1 class="sitename">Gaurikeerthana</h1>
         </a>
 
         <nav id="navmenu" class="navmenu">
