--- a/Grandoria/contact.html
+++ b/Grandoria/contact.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Contact - Grandoria Bootstrap Template</title>
+  <title>Contact - Gaurikeerthana Bootstrap Template</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -93,14 +93,6 @@
     <!-- Contact Section -->
     <section id="contact" class="contact section">
 
-      <!-- Map Section -->
-      <div class="map-container mb-5">
-        <iframe 
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3888.847202299823!2d80.13416941482767!3d12.940152191450316!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a525b1a33e0b12b%3A0x4d74c2c5a2a1b967!2sGuruvayur%20Temple!5e0!3m2!1sen!2sin!4v1700000000000!5m2!1sen!2sin" 
-          width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-        </iframe>
-      </div>
-
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
         <!-- Contact Info -->
@@ -112,7 +104,7 @@
               </div>
               <div class="info-content">
                 <h4>Location</h4>
-                <p>482 Pine Street, Seattle, Washington 98101</p>
+                <p>227/1, W Nada, Muthuvattoor, Guruvayur, Kerala 680101</p>
               </div>
             </div>
           </div>
@@ -176,6 +168,15 @@
               </form>
             </div>
           </div>
+        </div>
+
+        <!-- Map Section -->
+        <div class="map-container mt-5" data-aos="fade-up" data-aos-delay="400">
+          <h3 class="text-center mb-4">Find Us</h3>
+          <iframe 
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3888.847202299823!2d80.13416941482767!3d12.940152191450316!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a525b1a33e0b12b%3A0x4d74c2c5a2a1b967!2sGuruvayur%20Temple!5e0!3m2!1sen!2sin!4v1700000000000!5m2!1sen!2sin" 
+            width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+          </iframe>
         </div>
 
       </div>
