--- a/Grandoria/terms.html
+++ b/Grandoria/terms.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Terms - Grandoria Bootstrap Template</title>
+  <title>Terms - Gaurikeerthana Bootstrap Template</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -28,7 +28,7 @@
   <link href="assets/css/main.css" rel="stylesheet">
 
   <!-- =======================================================
-  * Template Name: Grandoria
+  * Template Name: Gaurikeerthana
   * Template URL: https://bootstrapmade.com/grandoria-bootstrap-hotel-template/
   * Updated: Jul 29 2025 with Bootstrap v5.3.7
   * Author: BootstrapMade.com
@@ -59,7 +59,7 @@
         <a href="index.html" class="logo d-flex align-items-center">
           <!-- Uncomment the line below if you also wish to use an image logo -->
           <!-- <img src="assets/img/logo.webp" alt=""> -->
-          <h1 class="sitename">Grandoria</h1>
+          <h1 class="sitename">Gaurikeerthana</h1>
         </a>
 
         <nav id="navmenu" class="navmenu">
@@ -231,7 +231,7 @@
             <div class="contact-content">
               <h4>Questions About Terms?</h4>
               <p>If you have any questions about these Terms, please contact us.</p>
-              <a href="#" class="contact-link">Contact Support</a>
+              <a href="contact.html" class="contact-link">Contact Support</a>
             </div>
           </div>
         </div>
@@ -248,7 +248,7 @@
         <div class="row gy-4">
           <div class="col-lg-4 col-md-6 footer-about">
             <a href="index.html" class="logo d-flex align-items-center">
-              <span class="sitename">Grandoria</span>
+              <span class="sitename">Gaurikeerthana</span>
             </a>
             <div class="footer-contact pt-3">
               <p>A108 Adam Street</p>
